    * Better dynamic video re-sizing to fit area, based on inputted aspect ratio.
    * Progressive loading for longer videos.
* Improvement: Design enhancements for default post showcase display.
* Improvement: Design enhancements for Magnific Popup lightbox navigation.
* Improvement: Better mobile fallback for parallax background images.
* Improvement: More default spacing between elements in custom layouts.
* Updated: FontAwesome to 4.5.
* Updated: FlexSlider to 2.6.
* Fixed: Sticky menu logo shouldn't get `srcset` from main header logo.
* Fixed: Accordion feature not working with Toggles element of Layout Builder.
* Fixed: When setting an element to pull from a list of pages, the total number of pages returned shouldn't be interfered with.
* Fixed: More minor RTL bug fixes.
    * Frontend post grid/showcase filtering and masonry now aligns correctly to the right.
    * Tabs and pills of Tabs element now align properly to right.
    * Panels no longer force text to be aligned left.
    * Pricing table columns now display in correct order, from right-to-left.
    * Progress bars now display and animate out from right.
    * "Custom CSS" option code editor on theme options page now works with RTL.

--------------------------------------------------------------

2.0.4 - 12/11/2015
------------------

* Improvement: Some frontend RTL fixes and improvements.
* Improvement: Admin RTL fixes and improvements.
* Improvement: Frontend post grid/showcase filtering now also effects navigating items in corresponding lightbox gallery.
* Improvement: Minor comment form styling adjustments for changes in WordPress 4.4+.
* Improvement: Now using `srcset` for HiDPI/Retina logo with no javascript, to match practices of WordPress 4.4+.
* Fixed: Dropdown menus not displaying when adding a parallax background image or video background to site header from theme options.
* Fixed: Post slider style #2 captions not displaying correctly.